--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -6,12 +6,12 @@
 		<title><%=title%></title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="/css/bootstrap.min.css"> 
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="css/styles.css" rel="stylesheet">
+		<link href="/css/styles.css" rel="stylesheet">
 	</head>
 	<body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -91,11 +91,11 @@
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-            Sign Up! or <a href = '/auth/signin'>sign in </a>
-            <form name = "signUpForm" action ="/auth/signUp" method = "Post">
+            Sign In! 
+            <form name = "signUpForm" action ="/auth/signin" method = "Post">
                 UserName : <input name = "username" id = "username"/><br/>
                 Password: <input name = "password" id = "password"><br/>
-                <input type = "submit" Value = "Sign up"/>
+                <input type = "submit" Value = "Sign in"/>
 
             </form>
             </div>
